# DL-PaperReplication

./: README.md  pyproject.toml  requirements.txt
citrus_aco_cnn/: __init__.py  __main__.py  cli.py  config.py
citrus_aco_cnn/data/: __init__.py  augment.py  loader.py  pipeline.py
citrus_aco_cnn/evaluation/: __init__.py  metrics.py
citrus_aco_cnn/feature_selection/: __init__.py  aco.py
citrus_aco_cnn/models/: __init__.py  cnn.py  head.py
citrus_aco_cnn/training/: __init__.py  pipeline.py
