[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citrus_aco_cnn"
version = "0.1.0"
description = "Ant-Colony-Optimised CNN for citrus-leaf disease classification"
requires-python = ">=3.9"
dependencies = [
    "tensorflow>=2.14",
    "tensorflow-datasets>=4.8",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]
